@startuml

title __SERVICE's Class Diagram__\n

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.service {
      interface CanvasService {
          {abstract} + update()
          {abstract} + removeChair()
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.service {
      class CanvasServiceImpl {
          + update()
          + removeChair()
          - isNewChair()
          - hasNoUser()
          - createOrUpdateChair()
          - canBindUserToChair()
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.service {
      interface UserService {
          {abstract} + login()
          {abstract} + register()
          {abstract} + whoAmI()
          {abstract} + whoAmI()
          {abstract} + pushNewUserOnlineNotification()
          {abstract} + update()
          {abstract} + updateAvatar()
          {abstract} + findById()
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.service {
      class UserServiceImpl {
          - authenticationManager : AuthenticationManager
          ~ passwordEncoder : PasswordEncoder
          - template : SimpMessagingTemplate
          + login()
          + register()
          + whoAmI()
          + whoAmI()
          + update()
          + updateAvatar()
          + findById()
          + pushNewUserOnlineNotification()
      }
    }
  }
  

  CanvasServiceImpl -up-|> CanvasService
  CanvasServiceImpl o-- ChairRepository : chairRepository
  CanvasServiceImpl o-- CanvasRepository : canvasRepository
  CanvasServiceImpl o-- UserRepository : userRepository
  UserServiceImpl -up-|> UserService
  UserServiceImpl o-- UserRepository : userRepository
  UserServiceImpl o-- RoleRepository : roleRepository
  UserServiceImpl o-- JwtTokenProvider : jwtTokenProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
